[package]
name = "gitlab-telegram"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#regex = "1"
serde = { version = "1.0", features = ["derive"] }
reqwest = {version = "0.11.5", features = ["blocking"]}
serde_json = "1.0.68"
